--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: danoday/package-lock.json
+          cache-dependency-path: ./danoday/package-lock.json
 
       - name: Install dependencies
         run: cd danoday && npm install
