--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,9 @@
     "useDefineForClassFields": true,
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "types": ["react", "react-dom", "vite/client"],
     "skipLibCheck": true,
+    "typeRoots": ["node_modules/@types"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
