--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "types": []
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
